<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productNameTxt"
    android:layout_width="match_parent"
    android:background="#949ca4"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridLayout"
...
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:columnCount="1"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImage">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:backgroundTint="#272928"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
...
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Product:"
                    android:textColor="#ff9999"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    android:paddingLeft="15dp"
                    android:textAlignment="gravity"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/productName"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="0.0"
                    android:textSize="18sp"
...

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:textColor="#ff9999"
                    android:text="Price:"
                    android:textAlignment="gravity"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/productPriceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Boolean"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="18sp"
...
        android:layout_height="0dp"
        android:layout_marginEnd="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/header_background"
        android:backgroundTint="#272928"
        android:text="Add to cart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/relativeLayout"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:onClick="home"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:src="@drawable/ic_home_pink"/>

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:onClick="search"
            android:src="@drawable/ic_pink_search"/>

        <ImageButton
            android:id="@+id/barcodeBtn"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:layout_height="match_parent"
            android:onClick="scan"
            android:src="@drawable/ic_pink_scan"/>

        <ImageButton
            android:id="@+id/cartBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="#272928"
            android:layout_weight=".25"
            android:onClick="cart"
            android:src="@drawable/ic_basket"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupSizes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gridLayout">

        <RadioButton
            android:id="@+id/radioButtonS"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="Small"
            android:textAlignment="center"
            android:textColor="@drawable/text_color"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonM"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="Medium"
            android:textAlignment="center"
            android:textColor="@drawable/text_color"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonL"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="Large"
            android:textAlignment="center"
            android:textColor="@drawable/text_color"
            android:textSize="18sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
